Apply checkstyle and findbugs